# chat_gpt_clone

./: .gitignore  Agent.py  Dockerfile  README.md  agent.py  config.py  docker-compose.yml  main.py  notes.md  prompts.py  pyproject.toml  requirements.txt  test.py
Agents/: OrchestratorAgent.py  PlannerAgent.py  ResearchAgent.py  ResponseAgent.py  ReviewAgent.py  SectionAgent.py  utils.py
LLM/: LLM.py
MCP/: server.py
Model/: LLM.py
ModelSchemas/: schemas.py
Models/: Gemini.py
Prompts/: Agent.py  AgentPrompts.py
a2a_mcp/: test_vector_search.py
agent_cards/: essay_research_agent.json  essay_review_agent.json  essay_section_writer_agent.json
agents/: BaseAgent.py  BodyAgent.py  ConclusionAgent.py  FormatingAgent.py  InputProcessingAgent.py  IntroAgent.py  Orchestrator.py  OrchestratorAgent.py  PlannerAgent.py  PlanningAgent.py  ReviewAgent.py
backend/: Dockerfile  Makefile  README.md  debugging.ipynb  future_of_ai_essay.txt  main.py  pyproject.toml  requirements.txt
backend_fast_api/: Makefile  main.py  pyproject.toml  test.db
backend_fast_api/app/: extensions.py
backend_fast_api/app/api/: main.py
backend_fast_api/app/api/routes/: Chat.py  User.py
backend_fast_api/app/auth/: utils.py
backend_fast_api/app/core/: config.py
backend_fast_api/app/models/: Common.py  User.py
backend_fast_api/app/user/: controller.py  models.py  schemas.py
examples/: Model.py  notes.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
helpers/: prompts.py  schemas.py
intro/: basic.py  notes.md  retrival.py  tools.py  (+1 more)
(+265 files in other folders)
